feat: add authentication dto boundary