@@ -9,6 +9,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
+import com.darshan.journalApplication.shared.error.ConflictException;
+import java.util.Locale;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -20,28 +23,34 @@ import java.util.Optional;
 @Slf4j
 public class UserEntryService {
 
-    @Autowired
-    private UserEntryRepository userEntryRepository;
+    private final UserEntryRepository userEntryRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    private  static final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
+    public UserEntryService(UserEntryRepository userEntryRepository,
+                            PasswordEncoder passwordEncoder) {
+        this.userEntryRepository = userEntryRepository;
+        this.passwordEncoder = passwordEncoder;
+    }
 
     public void saveEntry(User user){
         userEntryRepository.save(user);
     }
 
-    public void saveNewUser(User user){
-        try
-        {
+    @Transactional
+    public User saveNewUser(User user){
+        String userName = user.getUserName().trim().toLowerCase(Locale.ROOT);
+        String email = user.getEmail().trim().toLowerCase(Locale.ROOT);
+        if (userEntryRepository.existsByUserName(userName)) {
+            throw new ConflictException("Username already exists");
+        }
+        if (userEntryRepository.existsByEmail(email)) {
+            throw new ConflictException("Email already exists");
+        }
+        user.setUserName(userName);
+        user.setEmail(email);
         user.setPassword(passwordEncoder.encode(user.getPassword()));
-        user.setRole(Arrays.asList("USER" , "ADMIN"));
-        userEntryRepository.save(user);
-        }
-        catch (Exception e) {
-              log.info("Error while using info");
-              log.error("Error occured for {}: "  ,user.getUserName() ,e);
-              log.warn("Error while using warn");
-        }
-
+        user.setRole(List.of("USER"));
+        return userEntryRepository.save(user);
     }
 
     public List<User> getAll(){
